--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1 id="main-header">Hello Leaders</h1>
 <a href="https://www.bing.com/search?EID=MBSC&form=BGGCMF&pc=U763&DPC=BG02&q=google
 .com&PC=U316&FORM=CHROMN GOOGLE">GOOGLE</a>
-<img src="C:\Users\User\OneDrive\Pictures\Screenshots\DOC.1.png" width="600px" height="400px">
+<img src="DOC.1.png" width="600px" height="400px">
 <p class="one"><i><b>this is my favorite document I own</b></i></p>
 <p class="two"><i><b>I can't do that at first</b></i></p>
 <p class="three"><i><b> before I do the document, I need to do something</b></i></p>
@@ -21,4 +21,5 @@
 <li>take a rest</li>
 </ol>
 </body>
+
 </html>
